# CMS375-Spring2026

./: .htaccess  Connect.php  Dockerfile  Point.php  README.md  compose.yml  composer.json  index.php  logout.php
account/: Account.php  Admin.php  AdminEditableTrait.php  Billing.php  Diagnosible.php  DiagnosibleTrait.php  EditableUserTrait.php  Employed.php  EmployedTrait.php  Ems.php  Gaurduan.php  Institution.php  InstitutionType.php  LabTech.php  Nurse.php  ParentRelationship.php  Patient.php  Perscribable.php  Pharmacist.php  Physician.php  PrescribableTrait.php  Radiologist.php  Receptionist.php  StaffLoginTrait.php  Surgeon.php  Therapist.php  VisitTrait.php  VisitType.php  blood.php  prefix.php  role.php  suffix.php
components/: appointments.php  dashboard.php  forgot-password.php  lab-results.php  login.php  map.php  prescriptions.php  register.php  reset-password.php  schedule.php  visits.php
docs/: classes.md  codeflow.md  diagrams.md  full.md  functions.md  procedures.md  tables.md  views.md
error/: 400.html  401.html  403.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  415.html  416.html  417.html  418.html  422.html  429.html  451.html  500.html  502.html  503.html  504.html
k8s/: configmap.yaml  deployment.yaml  mysql-deployment.yaml  secrets.yaml  service-lb.yaml  service.yaml  vault.yaml
pharmaceutical/: Allergy.php  AllergyType.php  DrugInteraction.php  Form.php  LDroute.php  Medicine.php  Pharmaceutical.php  (+5 more)
sql/c/: CMakeLists.txt  Dockerfile  main.c  point.c  point.h  udf.c
(+83 files in other folders)
